translated the header

--- a/client/public/locales/ar.json
+++ b/client/public/locales/ar.json
@@ -7,5 +7,15 @@
   "home-image-2": "بنجاحك",
 
   "instructor": "أنا مدرب",
-  "learner": "أنا متعلم"
+  "learner": "أنا متعلم",
+
+  "nav-1": "الرئيسية",
+  "nav-2": "الدورات",
+  "nav-3": "جلسات التدريب",
+  "nav-4": "الدورات المسجلة",
+  "nav-5": "لوحة التحكم",
+  "nav-6": "كن مدرباً",
+
+  "login": "تسجيل الدخول",
+  "signup": "التسجيل"
 }
