mission and we are sections translated

--- a/client/public/locales/ar.json
+++ b/client/public/locales/ar.json
@@ -17,5 +17,12 @@
   "nav-6": "كن مدرباً",
 
   "login": "تسجيل الدخول",
-  "signup": "التسجيل"
+  "signup": "التسجيل",
+
+  "our-mission": "مهمّتنا",
+  "our-mission-text-1": "تمكين القادة من إحداث تأثير إيجابي ومستدام داخل مؤسساتهم",
+  "our-mission-text-2": "من خلال التدريب والاستشارات عالية الجودة",
+
+  "we-are": "نحن Future Insights",
+  "we-are-text": "في عالم مليء بالتحدّيات والتغيّرات السريعة، تُعدّ أكاديميّة Future Insights الوجهة الأولى للمديرين التنفيذيين والقادة الطموحين. نحن منصّة شاملة مكرّسة لتوفير تجربة تعليميّة متكاملة واستشارات إداريّة تجمع بين المعرفة النظريّة والتطبيقات العمليّة، لتطوير مهارات القيادة الاستراتيجيّة والإدارة."
 }
