--- a/client/public/locales/en.json
+++ b/client/public/locales/en.json
@@ -17,5 +17,12 @@
   "nav-6": "Become an Instructor",
 
   "login": "Login",
-  "signup": "Sign up"
+  "signup": "Sign up",
+
+  "our-mission": "Our Mission",
+  "our-mission-text": "Empowering leaders to make a sustainable and positive impact",
+  "our-mission-text-2": "within their organizations through high-quality Training & Consultation.",
+
+  "we-are": "We are Future Insights",
+  "we-are-text": "In a world full of challenges and rapid changes, Future Insights Academy stands as the premier destination for executives and aspiring leaders. We are a comprehensive platform dedicated to providing a holistic learning experience and Management consultation that combines theoretical knowledge with practical applications to develop strategic leadership and management skills."
 }
