--- a/client/public/locales/ar.json
+++ b/client/public/locales/ar.json
@@ -24,5 +24,8 @@
   "our-mission-text-2": "من خلال التدريب والاستشارات عالية الجودة",
 
   "we-are": "نحن Future Insights",
-  "we-are-text": "في عالم مليء بالتحدّيات والتغيّرات السريعة، تُعدّ أكاديميّة Future Insights الوجهة الأولى للمديرين التنفيذيين والقادة الطموحين. نحن منصّة شاملة مكرّسة لتوفير تجربة تعليميّة متكاملة واستشارات إداريّة تجمع بين المعرفة النظريّة والتطبيقات العمليّة، لتطوير مهارات القيادة الاستراتيجيّة والإدارة."
+  "we-are-text": "في عالم مليء بالتحدّيات والتغيّرات السريعة، تُعدّ أكاديميّة Future Insights الوجهة الأولى للمديرين التنفيذيين والقادة الطموحين. نحن منصّة شاملة مكرّسة لتوفير تجربة تعليميّة متكاملة واستشارات إداريّة تجمع بين المعرفة النظريّة والتطبيقات العمليّة، لتطوير مهارات القيادة الاستراتيجيّة والإدارة.",
+
+  "our-vision": "رؤيتنا",
+  "our-vision-text": "أن نصبح الشريك الموثوق للقادة والمديرين التنفيذيين في رحلتهم نحو التميّز والابتكار."
 }
