--- a/client/public/locales/en.json
+++ b/client/public/locales/en.json
@@ -24,5 +24,8 @@
   "our-mission-text-2": "within their organizations through high-quality Training & Consultation.",
 
   "we-are": "We are Future Insights",
-  "we-are-text": "In a world full of challenges and rapid changes, Future Insights Academy stands as the premier destination for executives and aspiring leaders. We are a comprehensive platform dedicated to providing a holistic learning experience and Management consultation that combines theoretical knowledge with practical applications to develop strategic leadership and management skills."
+  "we-are-text": "In a world full of challenges and rapid changes, Future Insights Academy stands as the premier destination for executives and aspiring leaders. We are a comprehensive platform dedicated to providing a holistic learning experience and Management consultation that combines theoretical knowledge with practical applications to develop strategic leadership and management skills.",
+
+  "our-vision": "Our Vision",
+  "our-vision-text": "To become the trusted partner for Leaders and executives in their journey toward excellence and innovation."
 }
