team title translated

--- a/client/public/locales/ar.json
+++ b/client/public/locales/ar.json
@@ -27,5 +27,13 @@
   "we-are-text": "في عالم مليء بالتحدّيات والتغيّرات السريعة، تُعدّ أكاديميّة Future Insights الوجهة الأولى للمديرين التنفيذيين والقادة الطموحين. نحن منصّة شاملة مكرّسة لتوفير تجربة تعليميّة متكاملة واستشارات إداريّة تجمع بين المعرفة النظريّة والتطبيقات العمليّة، لتطوير مهارات القيادة الاستراتيجيّة والإدارة.",
 
   "our-vision": "رؤيتنا",
-  "our-vision-text": "أن نصبح الشريك الموثوق للقادة والمديرين التنفيذيين في رحلتهم نحو التميّز والابتكار."
+  "our-vision-text": "أن نصبح الشريك الموثوق للقادة والمديرين التنفيذيين في رحلتهم نحو التميّز والابتكار.",
+
+  "partner-text-1": "من خلال مزيج من الرؤى المتقدمة، والتدريب التفاعلي، والإرشاد العملي،",
+  "partner-text-2": "نتعاون مع المديرين التنفيذيين والمؤسسات لبناء قيادة أقوى",
+  "partner-text-3": "، وتعظيم الأداء، وفتح آفاق جديدة للنمو المستقبلي.",
+
+  "team-title-1": "نحن نجمع فريقًا من الخبراء المتمرّسين، بما في ذلك",
+  "team-title-beige": "مدرّبين معتمدين رئيسيين (CMTs)",
+  "team-title-2": "، ومدرّبين تنفيذيين، وقادة في مجال الصناعة، متخصصين في"
 }
