--- a/client/public/locales/en.json
+++ b/client/public/locales/en.json
@@ -27,5 +27,13 @@
   "we-are-text": "In a world full of challenges and rapid changes, Future Insights Academy stands as the premier destination for executives and aspiring leaders. We are a comprehensive platform dedicated to providing a holistic learning experience and Management consultation that combines theoretical knowledge with practical applications to develop strategic leadership and management skills.",
 
   "our-vision": "Our Vision",
-  "our-vision-text": "To become the trusted partner for Leaders and executives in their journey toward excellence and innovation."
+  "our-vision-text": "To become the trusted partner for Leaders and executives in their journey toward excellence and innovation.",
+
+  "partner-text-1": "Through a combination of cutting-edge insights, interactive training, and hands-on coaching,",
+  "partner-text-2": "we partner with executives and organizations to build stronger leadership",
+  "partner-text-3": ", maximize performance, and unlock future growth opportunities.",
+
+  "team-title-1":"We bring together a team of seasoned experts, including",
+  "team-title-beige":"Certified Master Trainers (CMTs)",
+  "team-title-2":", executive coaches, and industry leaders, specializing in"
 }
