--- a/client/public/locales/ar.json
+++ b/client/public/locales/ar.json
@@ -39,15 +39,28 @@
 
   "instructor-form-title": "نموذج انتساب مدرب",
   "instructor-form-name": "الاسم الكامل",
-  "instructor-form-name-holder":"اكتب اسمك",
+  "instructor-form-name-holder": "اكتب اسمك",
   "instructor-form-email": "البريد الإلكتروني",
   "instructor-form-phone": "رقم الهاتف",
-  "instructor-form-phone-holder":"اكتب رقم هاتفك",
+  "instructor-form-phone-holder": "اكتب رقم هاتفك",
   "instructor-form-tell": "حدثنا أكثر عن نفسك",
-  "instructor-form-tell-holder":"اكتب لنا المزيد عن نفسك",
+  "instructor-form-tell-holder": "اكتب لنا المزيد عن نفسك",
   "instructor-form-back": "الرجوع",
   "instructor-form-send": "إرسال الطلب",
   "instructor-form-thanks-1": "شكرا لاهتمامك",
   "instructor-form-confirmation": "سنتواصل معك بأقرب وقت",
-  "instructor-form-home": "رجوع"
+  "instructor-form-home": "رجوع",
+
+  "coaching-session-header": "احجز استشارتك المجانية لمدة 20 دقيقة",
+  "coaching-session-subheader-1": "نحن متاحون يوميًا من الساعة",
+  "coaching-session-subheader-bold": "9 صباحًا حتى 6 مساءً.",
+  "coaching-session-subheader-2": "خذ الخطوة الأولى نحو التغيير من خلال جلسة فردية مجانية.",
+  "coaching-session-name": "اسمك",
+  "coaching-session-email": "بريدك الإلكتروني",
+  "coaching-session-phone": "رقم هاتفك",
+  "coaching-session-date": "التاريخ ",
+  "coaching-session-time": "الوقت",
+  "coaching-session-reserve": "احجز الجلسة",
+  "coaching-session-reserving": "جار الحجز",
+  "coaching-session-success": "تم الحجز بنجاح"
 }
