--- a/client/public/locales/en.json
+++ b/client/public/locales/en.json
@@ -51,17 +51,20 @@
   "instructor-form-confirmation": "We'll get back to you in no time",
   "instructor-form-home": "Home",
 
-  "coaching-session-header":"Reserve Your Free 20-Minute Coaching Session",
-  "coaching-session-subheader-1":"We're available daily from",
-  "coaching-session-subheader-bold":"9 AM to 6 PM",
-  "coaching-session-subheader-2":"Take the first step toward transformation with a complimentary one-on-one session.",
-  "coaching-session-name":"Your Name",
-  "coaching-session-email":"Your Email",
-  "coaching-session-phone":"Your Phone Number",
-  "coaching-session-date":"Select Date",
-  "coaching-session-time":"Select Time",
-  "coaching-session-reserve":"Reserve Session",
-  "coaching-session-reserving":"Booking...",
-  "coaching-session-success":"Session reserved successfully!"
+  "coaching-session-header": "Reserve Your Free 20-Minute Coaching Session",
+  "coaching-session-subheader-1": "We're available daily from",
+  "coaching-session-bold": "9 AM to 6 PM",
+  "coaching-session-subheader-2": "Take the first step toward transformation with a complimentary one-on-one session.",
+  "coaching-session-name": "Your Name",
+  "coaching-session-email": "Your Email",
+  "coaching-session-phone": "Your Phone Number",
+  "coaching-session-date": "Select Date",
+  "coaching-session-time": "Select Time",
+  "coaching-session-reserve": "Reserve Session",
+  "coaching-session-reserving": "Booking...",
+  "coaching-session-success": "Session reserved successfully!",
 
+  "Iam-learner-title": "What Would You Like To Do ?",
+  "Iam-learner-opt-1": "Sign in and start learning!",
+  "Iam-learner-opt-2": "Have a look around and check our course catalogue"
 }
