--- a/client/public/locales/ar.json
+++ b/client/public/locales/ar.json
@@ -1,4 +1,6 @@
 {
+  "loading": "جار التحميل...",
+
   "home-hero-1": "نَمِّ",
   "home-hero-2": "عملك",
   "home-hero-3": "معنا",
@@ -68,13 +70,15 @@
   "Iam-learner-opt-1": "تسجيل الدخول وبدء التعلم",
   "Iam-learner-opt-2": "تصفّح واطّلع على كتالوج الدورات لدينا.",
 
-  "signin-title":"مرحبًا بعودتك!",
-  "signin-email":"البريد الإلكتروني",
-  "signin-password":"كلمة المرور",
-  "signin-resend":"اعادة ارسال",
-  "signin-signin":"تسجيل الدخول",
-  "signin-forgot":"هل نسيت كلمة المرور؟",
-  "signin-no-account":"ليس لديك حساب؟",
-  "signin-signup":"سجّل الآن"
+  "signin-title": "مرحبًا بعودتك!",
+  "signin-email": "البريد الإلكتروني",
+  "signin-password": "كلمة المرور",
+  "signin-resend": "اعادة ارسال",
+  "signin-signin": "تسجيل الدخول",
+  "signin-forgot": "هل نسيت كلمة المرور؟",
+  "signin-no-account": "ليس لديك حساب؟",
+  "signin-signup": "سجّل الآن",
 
+  "course-catalogue-hero-1": "لائحة",
+  "course-catalogue-hero-2": "الدورات"
 }
