course grid translated

--- a/client/public/locales/ar.json
+++ b/client/public/locales/ar.json
@@ -96,5 +96,8 @@
   "newsletter": "النشرة الإخبارية",
   "newsletter-text": "اشترك للحصول على أحدث المقالات والموارد",
   "newsletter-email": "البريد الالكتروني",
-  "newsletter-register": "تسجيل"
+  "newsletter-register": "تسجيل",
+
+  "online-courses": "الكورسات",
+  "interactive-online-classes":"الدورات التفاعلية"
 }
