--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -142,5 +142,8 @@
   "cancel": "الغاء",
   "confirm": "تأكيد",
   "enrolling": "جار التسجيل",
-  "class-not-found": "لم يتم العثور على الدورة."
+  "class-not-found": "لم يتم العثور على الدورة.",
+
+  "logout-text": "هل أنت متأكد أنك تريد تسجيل الخروج؟",
+  "yes": "نعم"
 }
