--- a/client/src/assets/locales/en.json
+++ b/client/src/assets/locales/en.json
@@ -120,31 +120,48 @@
   "join-session": "Join Live Session",
   "session-not-started": "Session hasn't started yet",
 
-  "recording-title":"Session Recording",
+  "recording-title": "Session Recording",
 
-  "preview-not-available":"Preview not available for this file type.",
-  "material-title":"Material",
-  "download":"Download File",
-  "submit-answer":"Submit Your Answer",
-  "choose-file":" Choose File",
-  "selected-file":"Selected file",
-  "assessment-submit":"Submit",
-  "assessment-submitting":"Submitting...",
+  "preview-not-available": "Preview not available for this file type.",
+  "material-title": "Material",
+  "download": "Download File",
+  "submit-answer": "Submit Your Answer",
+  "choose-file": " Choose File",
+  "selected-file": "Selected file",
+  "assessment-submit": "Submit",
+  "assessment-submitting": "Submitting...",
 
-  "class-instructor":"Instructor",
-  "class-category":"Category",
-  "enroll-now":"Enroll Now",
-  "already-enrolled":"You are already enrolled",
-  "class-about":"About this class",
-  "demo-video":"Demo Video",
+  "class-instructor": "Instructor",
+  "class-category": "Category",
+  "enroll-now": "Enroll Now",
+  "already-enrolled": "You are already enrolled",
+  "class-about": "About this class",
+  "demo-video": "Demo Video",
   "confirm-enrollment": "Confirm Enrollment",
-  "confirmation-enrollment-text":"Are you sure you want to enroll in",
-  "cancel":"Cancel",
-  "confirm":"Confirm",
-  "enrolling":"Enrolling...",
-  "class-not-found":"Class not found.",
+  "confirmation-enrollment-text": "Are you sure you want to enroll in",
+  "cancel": "Cancel",
+  "confirm": "Confirm",
+  "enrolling": "Enrolling...",
+  "class-not-found": "Class not found.",
 
-  "logout-text":"Are you sure you want to sign out?",
-  "yes":"yes"
+  "logout-text": "Are you sure you want to sign out?",
+  "yes": "yes",
 
+  "classes": "Classes",
+  "courses": "Courses",
+  "certifications": "Certifications",
+  "edit-profile": "Edit Profile",
+
+  "no-classes-available-1": "There are currently no",
+  "no-classes-available-2": "in this section. Please check back later.",
+  "course-catalogue": "Course Catalogue",
+  "no": "No",
+  "available": "Available",
+
+  "current-password": "Current Password",
+  "enter-current-password": "Enter current password",
+  "new-pass": "New Password",
+  "confirm-pass": "Confirm New Password",
+  "update-profile": "Update Profile",
+  "updating": "Updating..."
 }
