added user management page

--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -17,6 +17,8 @@
   "nav-4": "الدورات المسجلة",
   "nav-5": "لوحة التحكم",
   "nav-6": "كن مدرباً",
+  "nav-7": "المستخدمين",
+
 
   "login": "تسجيل الدخول",
   "signup": "التسجيل",
