--- a/client/src/assets/locales/en.json
+++ b/client/src/assets/locales/en.json
@@ -17,6 +17,8 @@
   "nav-4": "My Courses",
   "nav-5": "Dashboard",
   "nav-6": "Become an Instructor",
+  "nav-7": "Users",
+
 
   "login": "Login",
   "signup": "Sign up",
