--- a/client/src/assets/locales/en.json
+++ b/client/src/assets/locales/en.json
@@ -19,7 +19,6 @@
   "nav-6": "Become an Instructor",
   "nav-7": "Users",
 
-
   "login": "Login",
   "signup": "Sign up",
 
@@ -153,8 +152,8 @@
   "courses": "Courses",
   "certifications": "Certifications",
   "edit-profile": "Edit Profile",
-  "classes-no-ll":"Classes",
-  "courses-no-ll":"Courses",
+  "classes-no-ll": "Classes",
+  "courses-no-ll": "Courses",
 
   "no-classes-available-1": "There are currently no",
   "no-classes-available-2": "in this section. Please check back later.",
@@ -167,5 +166,42 @@
   "new-pass": "New Password",
   "confirm-pass": "Confirm New Password",
   "update-profile": "Update Profile",
-  "updating": "Updating..."
+  "updating": "Updating...",
+
+  "refund-policy-title": "Refund Policy - Future Insights",
+  "refund-policy-effective-1": "Effective Date:",
+  "refund-policy-effective-2": "11/Mar/2025",
+  "refund-policy-description": "At Future Insights, we are committed to providing high-quality training, workshops, and coaching sessions. We understand that circumstances may change, and we strive to maintain a fair and transparent refund policy.",
+  "refund-policy-1-title": "1. General Refund Policy",
+  "refund-policy-1-description": "Refund eligibility depends on the type of service purchased:",
+  "refund-policy-1.1-title": "1.1 Workshops & Training Programs",
+  "refund-policy-1.1-strong-1": "Full Refund:",
+  "refund-policy-1.1-desc-1": "Cancellation at least 10 days before the start date.",
+  "refund-policy-1.1-strong-2": "50% Refund:",
+  "refund-policy-1.1-desc-2": "Cancellation between 7-10 days before the start date.",
+  "refund-policy-1.1-strong-3": "No Refund:",
+  "refund-policy-1.1-desc-3": "Cancellation less than 7 days before the start date. Registration transfer is available.",
+  "refund-policy-1.2-title": "1.2 Online Interactive Courses",
+  "refund-policy-1.2-strong-1": "Full Refund:",
+  "refund-policy-1.2-desc-1": "Cancellation at least 7 days before the start date.",
+  "refund-policy-1.2-strong-2": "50% Refund:",
+  "refund-policy-1.2-desc-2": "Cancellation between 3-7 days before the start date.",
+  "refund-policy-1.2-strong-3": "No Refund:",
+  "refund-policy-1.2-desc-3": "Cancellation less than 3 days before the start date.",
+  "refund-policy-2-title": "2. Workshop Cancellations by Future Insights",
+  "refund-policy-2-description-1": "Participants may reschedule or receive a full refund.",
+  "refund-policy-2-description-2": "If postponed, participants may transfer registration or receive a refund.",
+  "refund-policy-3-title": "3. Refund Processing",
+  "refund-policy-3-description-1-1": "Refund requests must be emailed to",
+  "refund-policy-3-description-1-2": "info@Futureinsights.ae",
+  "refund-policy-3-description-2": "Approved refunds will be processed within 7-10 business days.",
+  "refund-policy-4-title": "4. Non-Refundable Situations",
+  "refund-policy-4-description-1": "Failure to attend live sessions without cancellation.",
+  "refund-policy-4-description-2": "Dropping out after a workshop has started.",
+  "refund-policy-5-title": "5. Contact Us",
+  "refund-policy-5-description": "For any refund-related inquiries, please contact:",
+  "refund-policy-5-strong-1": "Email:",
+  "refund-policy-5-desc-1": "info@Futureinsights.ae",
+  "refund-policy-5-strong-2": "Phone:",
+  "refund-policy-5-desc-2": "+971 507 505 539 / +966 5933 40 212"
 }
