privacy policy translated

--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -203,5 +203,27 @@
   "refund-policy-5-strong-1": "بريد إلكتروني:",
   "refund-policy-5-desc-1": "info@Futureinsights.ae",
   "refund-policy-5-strong-2": "هاتف",
-  "refund-policy-5-desc-2": "+971 507 505 539 / +966 5933 40 212"
+  "refund-policy-5-desc-2": "+971 507 505 539 / +966 5933 40 212",
+
+  "privacy-policy-title": "سياسة الخصوصية",
+  "privacy-policy-1-title": "1. المعلومات التي نجمعها",
+  "privacy-policy-1-desc-1-1": "معلومات شخصية:",
+  "privacy-policy-1-desc-1-2": "الاسم والبريد الإلكتروني وتفاصيل الاتصال ومعلومات الدفع.",
+  "privacy-policy-1-desc-2-1": "بيانات الاستخدام:",
+  "privacy-policy-1-desc-2-2": "الصفحات التي تمت زيارتها، والوقت المستغرق في المنصة، والتفاعلات.",
+  "privacy-policy-1-desc-3-1": "ملفات تعريف الارتباط وتقنيات التتبع:",
+  "privacy-policy-1-desc-3-2": "يتم استخدامه لتحسين تجربة المستخدم وتتبع المشاركة.",
+  "privacy-policy-2-title": "2. كيف نستخدم معلوماتك",
+  "privacy-policy-2-desc-1": "لتوفير وتحسين خدماتنا التعليمية.",
+  "privacy-policy-2-desc-2": "لمعالجة المدفوعات وإدارة الاشتراكات",
+  "privacy-policy-2-desc-3": "للتواصل بشأن التحديثات والعروض الترويجية ورسائل الخدمة الأساسية.",
+  "privacy-policy-3-title": "3. أمن البيانات",
+  "privacy-policy-3-desc-1": "نحن نطبق تدابير أمنية صارمة لحماية بيانات المستخدم.",
+  "privacy-policy-3-desc-2": "يتم تشفير معاملات الدفع ومعالجتها بواسطة مقدمي خدمات الدفع التابعين لجهات خارجية.",
+  "privacy-policy-4-title": "4. مشاركة البيانات وخدمات الطرف الثالث",
+  "privacy-policy-4-desc-1": "نحن لا نبيع بيانات المستخدم إلى أطراف ثالثة.",
+  "privacy-policy-4-desc-2": "قد تتم مشاركة البيانات مع الشركاء التعليميين ومعالجات الدفع عند الضرورة.",
+  "privacy-policy-5-title": "5. حقوق المستخدم",
+  "privacy-policy-5-desc-1": "يمكن للمستخدمين طلب الوصول إلى بياناتهم الشخصية أو تعديلها أو حذفها.",
+  "privacy-policy-5-desc-2": "يمكن للمستخدمين إلغاء الاشتراك في الاتصالات التسويقية في أي وقت."
 }
